# ailint

./: .gitignore  README.md  pyproject.toml
examples/: sample_output.txt
src/ailint/: __main__.py  cli.py  deep.py  formatter.py  parser.py
src/ailint/rules/: __init__.py  bloat.py  contradiction.py  dead_ref.py  redundancy.py  vague.py
tests/: conftest.py  test_cli.py  test_parser.py  test_rules.py
tests/fixtures/: contradictory.md  dead_refs.md  good.md  redundant.md  vague.md  valid_ref_target.txt
