[project]
name = "ailint"
version = "0.1.0"
description = "Lint AI agent configuration markdown files for structural problems."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ailint = "ailint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailint"]
