[project]
name = "ailint"
version = "0.1.0"
description = "Lint AI agent configuration markdown files for structural problems."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Makito Chiba", email = "makiakatsu@gmail.com" }]
keywords = ["ai", "lint", "claude", "agents", "gemini", "cursor", "windsurf", "config"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
ailint = "ailint.cli:main"

[project.urls]
Homepage = "https://github.com/MakiDevelop/ailint"
Repository = "https://github.com/MakiDevelop/ailint"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailint"]

[tool.hatch.build.targets.sdist]
include = ["src/ailint", "tests", "README.md", "LICENSE", "pyproject.toml"]
